Add idols raw data, change effects delimiter

--- a/package.json
+++ b/package.json
@@ -2,6 +2,6 @@
   "name": "gakumas-data",
   "packageManager": "yarn@3.5.0",
   "scripts": {
-    "build": "python -m scripts.csv_to_json p_items"
+    "build": "python -m scripts.csv_to_json"
   }
 }
